<resources>
    <string name="app_name">AUO CMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">設定</string>
    <string name="action_logout">登出</string>

    <!-- Menu -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_label_scheduling">SCHEDULING</string>
    <string name="menu_air_program">Air Program Now</string>
    <string name="menu_program_management">Program Management</string>
    <string name="menu_label_content">CONTENT</string>
    <string name="menu_create_content">Create Content</string>
    <string name="menu_content_management">Content Management</string>
    <string name="menu_label_device">DEVICE</string>
    <string name="menu_device_management">Device Management</string>

    <!-- Common -->
    <string name="text_previous">前一步</string>
    <string name="text_next">下一步</string>
    <string name="text_edit">編輯</string>
    <string name="text_Okay">Okay</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_finish">完成</string>

    <!-- Login -->
    <string name="fragment_login_label_username">Username</string>
    <string name="fragment_login_label_password">Password</string>
    <string name="fragment_login_text_title">Welcome to AUO CMS.</string>
    <string name="fragment_login_text_remember">Remember this device</string>
    <string name="fragment_login_text_forgot_password">Forgot password?</string>
    <string name="fragment_login_text_login">Login</string>
    <string name="fragment_login_error_empty_username">Empty username</string>
    <string name="fragment_login_error_empty_password">Empty password</string>

    <!-- Forgot Password -->
    <string name="fragment_forgot_password_title">Forgot your password?</string>
    <string name="fragment_forgot_password_text">Please enter the email address associated with your account and We will email you a link to reset your password.</string>
    <string name="fragment_forgot_password_label_email">Email Address</string>
    <string name="fragment_forgot_password_hint_email">Email address</string>
    <string name="fragment_forgot_password_button_send_link">Send Link</string>
    <string name="fragment_forgot_password_back_to_login">Back to Login</string>

    <!-- Notification -->
    <string name="notification_title">Notifications</string>
    <string name="notification_see_all">See all Notifications</string>

    <!-- Dashboard -->
    <string name="fragment_dashboard_label_welcome">Welcome</string>
    <string name="fragment_dashboard_label_desc">Check the status of system &amp; device(s)</string>
    <string name="fragment_dashboard_title">Dashboard</string>
    <string name="fragment_dashboard_card_by_organization">By Organization</string>
    <string name="fragment_dashboard_card_by_version">By Software Version</string>
    <string name="fragment_dashboard_card_by_top_12">Top 12 By Organization</string>
    <string name="fragment_dashboard_card_content_title">Content</string>
    <string name="fragment_dashboard_card_content_storage_title">Storage Capacity</string>
    <string name="fragment_dashboard_card_content_storage_usage">12.08/15.00 GB</string>
    <string name="fragment_dashboard_card_content_chart_entry_image">Image</string>
    <string name="fragment_dashboard_card_content_chart_entry_video">Video</string>
    <string name="fragment_dashboard_card_content_chart_entry_others">Others</string>
    <string name="fragment_dashboard_card_content_chart_entry_free">Free</string>
    <string name="fragment_dashboard_card_schedule_title">Schedule</string>
    <string name="fragment_dashboard_card_schedule_chart_entry_schedule">Schedule</string>
    <string name="fragment_dashboard_card_device_title">Device</string>
    <string name="fragment_dashboard_card_device_chart_entry_online">Online</string>
    <string name="fragment_dashboard_card_device_chart_entry_offline">Offline</string>
    <string name="fragment_dashboard_card_program_title">Program</string>
    <string name="fragment_dashboard_text_delivered">已派送數量</string>
    <string name="fragment_dashboard_text_waiting_delivery">等待派送數</string>
    <string name="fragment_dashboard_text_current_playing">目前撥放數</string>
    <string name="fragment_dashboard_text_played_seconds">播放秒數</string>
    <string name="fragment_dashboard_text_media_storage">多媒體空間</string>

    <!-- Shelf -->
    <string name="fragment_shelf_title">貨架管理</string>
    <string name="fragment_shelf_header_name">貨架名稱</string>
    <string name="fragment_shelf_header_rows">列</string>
    <string name="fragment_shelf_header_columns">欄</string>
    <string name="fragment_shelf_player_manager_title">貨架: %1$s</string>
    <string name="fragment_shelf_player_header_name">名稱</string>
    <string name="fragment_shelf_player_row_text">第%1$d列</string>
    <string name="fragment_shelf_player_column_text">第%1$d欄</string>


    <!-- Quick -->
    <string name="fragment_quick_publish_title">快速發佈</string>
    <string name="fragment_quick_player_select_title">選擇播放器</string>
    <string name="fragment_quick_datetime_title">播放時間</string>
    <string name="fragment_quick_datetime_start_time">開始時間:</string>
    <string name="fragment_quick_datetime_end_time">結束時間:</string>
    <string name="title_activity_test">test</string>

    <!-- Device Management -->
    <string name="fragment_device_menu_device">Device</string>
    <string name="fragment_device_menu_edit_label">Edit Labels</string>
    <string name="fragment_device_menu_select">Select</string>
    <string name="fragment_device_menu_select_all_updatable">Select All Updatable</string>
    <string name="fragment_device_empty_list_text1">List is empty</string>
    <string name="fragment_device_empty_list_text2">No connected devices</string>
    <string name="fragment_device_toolbar_search_hint">Search</string>
    <string name="fragment_device_item_edit_button">Edit</string>
    <string name="fragment_device_label_online">Online</string>
    <string name="fragment_device_label_offline">Offline</string>
    <string name="fragment_device_label_updatable">Updatable</string>
    <string name="fragment_device_edit_label_new_label_hint">New Label</string>
    <string name="dialog_device_edit_label_device_name">Device Name</string>
    <string name="dialog_device_edit_label_device_information">Device Information</string>
    <string name="dialog_device_edit_label_labels">Labels</string>

</resources>