<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AUOPrimaryDark">

    <ImageView
        android:id="@+id/fragment_forgot_password_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_login_logo"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/fragment_forgot_password_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_forgot_password_title"
        android:textColor="@color/auo_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_logo"
        />

    <TextView
        android:id="@+id/fragment_forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_forgot_password_text"
        android:textColor="@color/auo_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_title"
        />

    <TextView
        android:id="@+id/fragment_forgot_password_label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_forgot_password_label_email"
        android:textColor="@color/auo_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_text"
        />

    <EditText
        android:id="@+id/fragment_forgot_password_input_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="10dp"
        android:hint="@string/fragment_forgot_password_hint_email"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_normal"
        android:textColor="@color/auo_text"
        android:textColorHint="@color/gray_500"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_label_email"
        />

    <TextView
        android:id="@+id/fragment_forgot_password_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="36dp"
        android:textColor="@color/error_color"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_input_email"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/fragment_forgot_password_button_send_link"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/AUOSecondary"
        android:textStyle="bold"
        android:text="@string/fragment_forgot_password_button_send_link"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_email_error"
        />

    <TextView
        android:id="@+id/fragment_forgot_password_label_back_to_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:text="@string/fragment_forgot_password_back_to_login"
        android:textColor="@color/AUOSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>