<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AUOPrimaryDark">

    <ImageView
        android:id="@+id/fragment_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_login_logo"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_login_text_title"
        android:textColor="@color/auo_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_logo"
        />

    <TextView
        android:id="@+id/fragment_login_label_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_login_label_username"
        android:textColor="@color/auo_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_title"
        />

    <EditText
        android:id="@+id/fragment_login_input_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_normal"
        android:textColor="@color/auo_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_label_username"
        />

    <TextView
        android:id="@+id/fragment_login_account_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="36dp"
        android:textColor="@color/error_color"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_input_account"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/fragment_login_label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="32dp"
        android:text="@string/fragment_login_label_password"
        android:textColor="@color/auo_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_account_error"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/fragment_login_label_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        android:text="@string/fragment_login_text_forgot_password"
        android:textColor="@color/AUOSecondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_account_error"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/fragment_login_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_normal"
        android:textColor="@color/auo_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_label_password"
        />

    <TextView
        android:id="@+id/fragment_login_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="36dp"
        android:textColor="@color/error_color"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <CheckBox
        android:id="@+id/fragment_login_checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:buttonTint="@color/checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_password_error"
        />

    <TextView
        android:id="@+id/fragment_login_label_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginRight="32dp"
        android:text="@string/fragment_login_text_remember"
        android:textColor="@color/auo_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_password_error"
        app:layout_constraintLeft_toRightOf="@id/fragment_login_checkbox_remember"
        />

    <Button
        android:id="@+id/fragment_login_button_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/AUOSecondary"
        android:textStyle="bold"
        android:text="@string/fragment_login_text_login"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_label_remember"
        />

</androidx.constraintlayout.widget.ConstraintLayout>