<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quick.PlayerSelectFragment">

    <TextView
        android:id="@+id/fragment_quick_device_select_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/fragment_quick_player_select_title"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_quick_device_select_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_quick_device_select_title"
        app:layout_constraintBottom_toTopOf="@id/fragment_quick_device_select_prev"
        tools:layout_editor_absoluteX="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_quick_device_select_check_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="5dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/fragment_quick_device_select_prev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/text_previous"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <Button
        android:id="@+id/fragment_quick_device_select_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/text_next"
        android:enabled="false"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>