<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_device_label_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    app:cardBackgroundColor="@color/flexy_grey_700"
    app:cardCornerRadius="20dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        >

        <TextView
            android:id="@+id/dialog_device_edit_label_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/dialog_device_edit_label_device_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        
        <com.auo.shelf.cmsapp.ui.common.AUOEditText
            android:id="@+id/dialog_device_edit_device_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/edit_text_normal"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_label_device_name"
            />

        <TextView
            android:id="@+id/dialog_device_edit_label_device_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/dialog_device_edit_label_device_information"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_name_edittext"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_device_edit_device_status_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_label_device_information"
            />

        <TextView
            android:id="@+id/dialog_device_edit_device_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_status_list"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/dialog_device_edit_device_firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_information"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/dialog_device_edit_label_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/dialog_device_edit_label_labels"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_firmware"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.auo.shelf.cmsapp.ui.common.DropDownEditText
            android:id="@+id/dialog_device_edit_device_label_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_normal"
            android:gravity="center_vertical"
            android:paddingHorizontal="14dp"
            android:hint="@string/fragment_device_toolbar_search_hint"
            android:textColorHint="@color/gray_500"
            android:textColor="@color/gray_500"
            android:textSize="16sp"
            android:drawableEnd="@drawable/icon_search_white"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_label_labels" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_device_edit_device_label_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_label_search"
            />

        <Button
            android:id="@+id/dialog_device_edit_btn_ok"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/AUOSecondary"
            android:textStyle="bold"
            android:text="@string/text_Okay"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_label_list"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/dialog_device_edit_btn_cancel"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/gray_500"
            android:textStyle="bold"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/dialog_device_edit_device_label_list"
            app:layout_constraintStart_toEndOf="@id/dialog_device_edit_btn_ok"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>